# recipe-recommender

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/plans/: 2026-05-23-plan.CLAUDE.md  2026-05-25-recipe-tutorial-design.CLAUDE.md  2026-05-25-recipe-tutorial-plan.CLAUDE.md  2026-05-25-shopping-list-design.CLAUDE.md  2026-05-25-shopping-list-plan.CLAUDE.md  2026-05-26-ingredient-quantity-design.CLAUDE.md  2026-05-26-ingredient-quantity-plan.CLAUDE.md
api/: index.py
app/: config.py  main.py
app/db/: init.py  models.py  session.py
app/prompts/: classify_dish.txt  new_dish.txt  plan_dishes.txt  recipe.txt
app/routes/: auth.py  dishes.py  history.py  ingredients.py  llm_config.py  plan.py  profile.py  recommend.py
app/services/: auth.py  cache.py  filters.py  gemini.py  pantry.py  scoring.py  week.py
app/services/llm/: factory.py  openai_compat.py  service.py
scripts/: backfill_meals.py  diag_db.py  invite.py  migrate.py  migrate_add_meals.py  migrate_add_quantities.py  migrate_add_recipe.py  reset_db.py
static/: app.js  index.html  style.css
tests/: conftest.py
tests/e2e/: conftest.py  test_smoke.py
tests/integration/: test_auth.py  test_dishes.py  test_history.py  test_ingredients.py  test_llm_config.py  test_log.py  test_plan.py  test_profile.py  test_recommend.py
tests/unit/: test_auth_service.py  test_backfill_meals.py  test_cache.py  test_crypto.py  test_fallback.py  test_filters.py  test_gemini_parser.py  test_invite.py  test_llm_factory.py  test_llm_providers.py  test_pantry.py  test_plan_compose.py  test_scoring.py  test_week.py
