[project]
name = "recipe-recommender"
version = "0.1.0"
description = "Local single-user meal recommender with Gemini"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "python-dotenv>=1.0",
  "google-genai>=0.3",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --strict-markers"

[tool.coverage.run]
source = ["app/services", "app/routes"]
omit = ["app/main.py"]
